[package]
name = "c_biber"
version = "0.0.0"
edition = "2021"
license="Apache-2.0"


description = "Small and trivial build system for C programs"
repository = "https://github.com/Robert42/c_biber"
keywords = ["C", "Build system"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.51"
walkdir = "2.4.0"

[dev-dependencies]
tempdir = "0.3.7"